# zuko

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  astdump.cpp  convo.h  dis.cpp  fiza-new.zk  fiza.plt  fiza.zk  fiza.zu  grammar.bnf  install.sh  opcode.h  parser.h  plutonium.cpp  program.zk  tofix.zk  uninstall.sh  unions.h  utility.h  var.h  zuko.c  zuko.cpp
Examples/: Power of 2 Constant Time.plt  Power of 2.plt  allSumPairs.plt  armstrong.plt  avgOfArrayValues.plt  binarySearch.plt  checkNumber.plt  complex.plt  edf.zk  factorial.plt  fibonacci.plt  fibonacciValues.plt  gcd.plt  inversions.zk  kphToMps.plt  lcs.zk  libcurl_basic.zk  matrixMul.plt  matrixMul.zk  minimumFromMatrix.plt  neonNumber.plt  pairSum.plt  palindromeCheck.plt  queue.plt  queue.zk  rateMonotonic.plt  rateMonotonic.zk  secondHighestElement.plt  sumOfTwoNums.plt  tictactoe.plt
Examples/Basic Programs/: sum of two int numbers
benchmark/: bubblesort.zk
docs/html/: annotated.html  annotated_dup.js  apifunctions_8h_source.html  apiver_8h_source.html  ast_8h.html  ast_8h.js  ast_8h_source.html  base64_8h_source.html  bignum_8h_source.html  builtin-map_8h_source.html  builtinfunc_8h_source.html  byte__src_8h_source.html  cgi-utils_8h_source.html  cgi_8h_source.html  classbignum-members.html  classbignum.html  classes.html  classmultipart__parser-members.html  classmultipart__parser.html  classparse__error-members.html  classparse__error.html  compiler_8h_source.html  conio_8h_source.html  console_8h_source.html  convo_8h_source.html  coroutineobj_8h_source.html  curl_8h_source.html  curl__slist_8h_source.html  datetime_8h_source.html  dir_0038d29c05e241b6ec1040b2b61b65c4.html  dir_0038d29c05e241b6ec1040b2b61b65c4.js  dir_017ad5e908c41501f6a06b5119b37293.html  dir_02cb215db5a26555555dd9cbe51fcb94.html  dir_02cb215db5a26555555dd9cbe51fcb94.js  dir_0743c3cfdec178183f4da596a3b5ad2a.html  dir_07ec55ea7d92bdd0a7cf49e0679ae3a3.html  dir_07ec55ea7d92bdd0a7cf49e0679ae3a3.js  dir_0c5ee4897b7765d89f50c9901970360a.html  dir_0e024a7c6009e4ccee31b3f6a7664cf8.html  dir_19fd9bee7a1773d2a079ba35d6245e35.html  (+235 more)
docs/latex/: annotated.tex  apifunctions_8h_source.tex  apiver_8h_source.tex  ast_8h.tex  ast_8h_source.tex  base64_8h_source.tex  bignum_8h_source.tex  builtin-map_8h_source.tex  builtinfunc_8h_source.tex  byte__src_8h_source.tex  cgi-utils_8h_source.tex  cgi_8h_source.tex  classbignum.tex  classmultipart__parser.tex  classparse__error.eps  classparse__error.tex  compiler_8h_source.tex  conio_8h_source.tex  console_8h_source.tex  convo_8h_source.tex  coroutineobj_8h_source.tex  curl_8h_source.tex  curl__slist_8h_source.tex  datetime_8h_source.tex  dis_8h_source.tex  dyn-str_8h_source.tex  files.tex  funobject_8h_source.tex  hierarchy.tex  json_8h_source.tex  klass_8h_source.tex  klassobject_8h_source.tex  lexer_8h_source.tex  libcurl_8h_source.tex  lntable_8h_source.tex  mariadb_8h_source.tex  math_8h_source.tex  md_README.tex  mem__map_8h_source.tex  mime_8h_source.tex  (+85 more)
examples/: BFS.zk  DFS.zk  bst.zk  complex.zk  happyNumber.plt  libcurl_basic.zk  program.pltb
examples/libcurl/: basic.zk
fiza/: packages.json  packages.txt
include/: PltObject.h  ZObject.h  apifunctions.h  apiver.h  ast.h  builtin-map.h  builtinfunc.cpp  builtinfunc.h  byte_src.h  c_api.cpp  c_api.h  compiler.cpp  compiler.h  convo.cpp  convo.h  coroutineobj.h  dis.cpp  dis.h  dyn-str.h  funobject.h  klass.c  klass.h  klassobject.c  klassobject.h  lexer.cpp  lexer.h  lntable.c  lntable.h  mem_map.h  misc.h  module.c  module.h  nativefun.h  nodeptr_vec.h  object.h  opcode.h  overflow.cpp  overflow.h  pair-vector.h  parser.cpp  (+40 more)
modules/: PltObject.h  cgi.cpp  cgi.h  conioWrapper.h  console.cpp  datetime.cpp  datetime.h  json.cpp  json.h  libcurl.cpp  libcurl.h  math.cpp  math.h  mysql.cpp  mysql.h  process.cpp  process.h  regex.cpp  regex.h  socket.cpp  socket.h
modules/base64/: base64.cpp  base64.h
modules/bignum/: bignum.cpp  bignum.h  bignumWrapper.cpp
modules/cgi/: cgi-utils.cpp  cgi-utils.h  cgi.cpp  cgi.h  multipart.cpp  multipart.h
modules/conio/: conio.cpp  conio.h  conioWrapper.cpp
modules/console/: console.cpp  console.h
modules/datetime/: datetime.cpp  datetime.h
modules/json/: json.cpp  json.h
modules/libcurl/: curl.cpp  curl.h  curl_slist.cpp  curl_slist.h  libcurl.cpp  libcurl.h  mime.cpp  mime.h  mimepart.cpp  mimepart.h
modules/mariadb/: mariadb.cpp  mariadb.h
modules/math/: math.cpp  math.h
modules/mysql/: mysql.cpp
modules/process/: process.cpp  process.h
modules/regex/: regex.cpp  regex.h
modules/socket/: socket.cpp  socket.h
src/: builtin-map.c  builtinfunc.c  builtinfunc.cpp  compiler.c  compiler.cpp  convo.c  dis.c  dyn-str.c  klass.c  klassobject.c  lexer.c  lntable.c  mem_map.c  misc.c  module.c  nodeptr_vec.c  overflow.c  pair-vector.c  parser.c  parser.cpp  ptr-vector.c  refgraph.c  repl.c  repl.cpp  signal-handlers.c  sizet_vector.c  strmap.c  symtable.c  token-vector.c  token.c  utility.cpp  vm.c  vm.cpp  zapi.c  zbytearray.c  zdict.c  zlist.c  zobject.c  zuko-src.c
std/: algo.plt  algo.zk  ansi.zk  argparse.zk  argparse.zu  flare.zk  json.plt  ll.plt  ll.zk
tests/: added-return.zk  addedReturn.zk  awkwardLexer.zk  awkwardLexer.zu  base64.zk  bignum.zk  bsearch.zk  bubblesort.zk  bubblesort.zu  builtins.zk  byte.plt  byte.zk  bytearray.zk  classes.zk  conversions.plt  conversions.zu  coroutines.plt  coroutines.zk  defaultArgs.zk  dicts.plt  dicts.zk  dmas.plt  dmas.zk  dowhile.zu  extended-classes.zk  extendedClasses.zk  extendedClasses.zu  factorial.zk  for.plt  for.zk  foreach.plt  foreach.zu  functions.zk  functions.zu  gcd.zk  hex_escape_char.zk  huffman.zk  huffman.zu  if.plt  ifelse.plt  (+40 more)
tests/outputs/: awkwardLexer.txt  base64.txt  byte.txt  bytearray.txt  classes.txt  conversions.txt  coroutines.txt  defaultArgs.txt  dicts.txt  dmas.txt  extended-classes.txt  extendedClasses.txt  for.txt  foreach.txt  huffman.txt  if.txt  ifelseif.txt  insertionsort.txt  linkedlist.txt  lists.txt  macro.txt  mergesort.txt  misc.txt  mstr.txt  multiline-expr.txt  (+12 more)
(+41 files in other folders)
